peac_dev/force-app/main/default/objects/Contract_Asset__c/Contract_Asset__c.object-meta.xml
<CustomObject>
    <label>Contract Asset</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Contract Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>