peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Accessories2__c.field-meta.xml
<CustomField>
    <fullName>Accessories2__c</fullName>
    <label>Accessories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADF</fullName>
            </value>
            <value>
                <fullName>DADF</fullName>
            </value>
            <value>
                <fullName>DFE</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Fax board</fullName>
            </value>
            <value>
                <fullName>Feeder</fullName>
            </value>
            <value>
                <fullName>FIN</fullName>
            </value>
            <value>
                <fullName>Finisher</fullName>
            </value>
            <value>
                <fullName>FLAT TOP</fullName>
            </value>
            <value>
                <fullName>LCT</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Network board</fullName>
            </value>
            <value>
                <fullName>PFU</fullName>
            </value>
            <value>
                <fullName>Printer board</fullName>
            </value>
            <value>
                <fullName>RADF</fullName>
            </value>
            <value>
                <fullName>Stand</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>