peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Accessories__c.field-meta.xml
<CustomField>
    <fullName>Accessories__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accessories</label>
    <length>80</length>
    <type>Text</type>
</CustomField>