peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Affidavit_POA_Sent__c.field-meta.xml
<CustomField>
    <fullName>Affidavit_POA_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Affidavit &amp; POA Sent</label>
    <type>Date</type>
</CustomField>