peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Amount_of_Usage__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Usage__c</fullName>
    <label>Amount of Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>