peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Asset_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Asset_Address_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Address 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>