peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Asset_City__c.field-meta.xml
<CustomField>
    <fullName>Asset_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>