peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Asset_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_Code__c</fullName>
    <label>Asset Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>006.005</fullName>
                <label>Air Compressors</label>
            </value>
            <value>
                <fullName>900.001</fullName>
                <label>ATM</label>
            </value>
            <value>
                <fullName>013.006</fullName>
                <label>Emmissions Testing Equipm</label>
            </value>
            <value>
                <fullName>013.008</fullName>
                <label>Frame Machine</label>
            </value>
            <value>
                <fullName>013.010</fullName>
                <label>Tire Balancer</label>
            </value>
            <value>
                <fullName>013.001</fullName>
                <label>Air Compressors - 013.001</label>
            </value>
            <value>
                <fullName>013.003</fullName>
                <label>Key Trak</label>
            </value>
            <value>
                <fullName>013.000</fullName>
                <label>Automotive (General)</label>
            </value>
            <value>
                <fullName>013.002</fullName>
                <label>Auto Lifts</label>
            </value>
            <value>
                <fullName>013.004</fullName>
                <label>Waste Oil Heater</label>
            </value>
            <value>
                <fullName>013.005</fullName>
                <label>Automotive Diagnostic Mac</label>
            </value>
            <value>
                <fullName>013.011</fullName>
                <label>Paint Booth</label>
            </value>
            <value>
                <fullName>013.100</fullName>
                <label>Other Auto Equipment</label>
            </value>
            <value>
                <fullName>013.007</fullName>
                <label>Pipe Bender</label>
            </value>
            <value>
                <fullName>013.009</fullName>
                <label>Tire Changer</label>
            </value>
            <value>
                <fullName>045.000</fullName>
                <label>Broker</label>
            </value>
            <value>
                <fullName>008.001</fullName>
                <label>CCTV Security System</label>
            </value>
            <value>
                <fullName>006.000</fullName>
                <label>Commerce &amp; Indus (Gen)</label>
            </value>
            <value>
                <fullName>006.003</fullName>
                <label>Scales</label>
            </value>
            <value>
                <fullName>006.007</fullName>
                <label>Used Fork Lift</label>
            </value>
            <value>
                <fullName>006.100</fullName>
                <label>Other C&amp;I</label>
            </value>
            <value>
                <fullName>006.001</fullName>
                <label>Carpet Cutting Machine</label>
            </value>
            <value>
                <fullName>006.002</fullName>
                <label>Packaging Equipment</label>
            </value>
            <value>
                <fullName>006.004</fullName>
                <label>Paint Sprayers</label>
            </value>
            <value>
                <fullName>006.017</fullName>
                <label>Scissor Lifts</label>
            </value>
            <value>
                <fullName>006.010</fullName>
                <label>Furnace</label>
            </value>
            <value>
                <fullName>006.006</fullName>
                <label>Generator</label>
            </value>
            <value>
                <fullName>006.013</fullName>
                <label>Boiler</label>
            </value>
            <value>
                <fullName>006.015</fullName>
                <label>Machine Tool</label>
            </value>
            <value>
                <fullName>006.014</fullName>
                <label>Bailer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>