peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Asset_Cost__c.field-meta.xml
<CustomField>
    <fullName>Asset_Cost__c</fullName>
    <label>Asset Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>