peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Asset_Country__c.field-meta.xml
<CustomField>
    <fullName>Asset_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>