peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Asset_County__c.field-meta.xml
<CustomField>
    <fullName>Asset_County__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset County</label>
    <length>80</length>
    <type>Text</type>
</CustomField>