peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Asset_Disposed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Asset_Disposed_Amount__c</fullName>
    <label>Asset Disposed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>