peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Asset_Disposed_Date__c.field-meta.xml
<CustomField>
    <fullName>Asset_Disposed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Disposed Date</label>
    <type>Date</type>
</CustomField>