peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Asset_Disposition_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_Disposition_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Disposition Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>