peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Asset_Disposition_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Disposition_Type__c</fullName>
    <label>Asset Disposition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal Buyout to Return</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>End of Term-$0.00</fullName>
            </value>
            <value>
                <fullName>Duplicate Booking</fullName>
            </value>
            <value>
                <fullName>Renewal Buyout to Keep</fullName>
            </value>
            <value>
                <fullName>CA GIS Return</fullName>
            </value>
            <value>
                <fullName>Charge Off</fullName>
            </value>
            <value>
                <fullName>Upgrade to Return</fullName>
            </value>
            <value>
                <fullName>Customer Buyout to Keep</fullName>
            </value>
            <value>
                <fullName>Xerox Base Business</fullName>
            </value>
            <value>
                <fullName>Partial Dispostion</fullName>
            </value>
            <value>
                <fullName>Duplicate/Cancel Superced</fullName>
            </value>
            <value>
                <fullName>Customer Buyout to Return</fullName>
            </value>
            <value>
                <fullName>Supplement/addendum</fullName>
            </value>
            <value>
                <fullName>Renewal Upgrade to Keep</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>CA GIS Keep Equipment</fullName>
            </value>
            <value>
                <fullName>End of Lease</fullName>
            </value>
            <value>
                <fullName>Renewal Upgrade to Return</fullName>
            </value>
            <value>
                <fullName>Upgrade to Keep</fullName>
            </value>
            <value>
                <fullName>CA UPGRADE TO KEEP</fullName>
            </value>
            <value>
                <fullName>CA UPGRADE TO RETURN</fullName>
            </value>
            <value>
                <fullName>Partial Disposition</fullName>
            </value>
            <value>
                <fullName>End of Term</fullName>
            </value>
            <value>
                <fullName>Core Buy-back</fullName>
            </value>
            <value>
                <fullName>B</fullName>
                <isActive>false</isActive>
                <label>B</label>
            </value>
            <value>
                <fullName>D</fullName>
                <isActive>false</isActive>
                <label>D</label>
            </value>
            <value>
                <fullName>T</fullName>
                <isActive>false</isActive>
                <label>T</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>