peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Asset_Level_Payment__c.field-meta.xml
<CustomField>
    <fullName>Asset_Level_Payment__c</fullName>
    <formula>Contract__r.Payment_Amount__c*(((Asset_Cost__c/Contract__r.Gross_Equipment_Cost__c)*100)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Level Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>