peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Asset_Location_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Asset_Location_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Location Effective Date</label>
    <type>Date</type>
</CustomField>