peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Asset Number</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>