peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Asset_State__c.field-meta.xml
<CustomField>
    <fullName>Asset_State__c</fullName>
    <label>Asset State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Code</valueSetName>
    </valueSet>
</CustomField>