peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Asset_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>