peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Buyout_Type__c.field-meta.xml
<CustomField>
    <fullName>Buyout_Type__c</fullName>
    <label>Buyout Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DISPOSED</fullName>
            </value>
            <value>
                <fullName>RECEIVED</fullName>
            </value>
            <value>
                <fullName>Investigate</fullName>
            </value>
            <value>
                <fullName>Upgrade to Return</fullName>
            </value>
            <value>
                <fullName>Upgrade to Keep</fullName>
            </value>
            <value>
                <fullName>Customer Buyout to Return</fullName>
            </value>
            <value>
                <fullName>Customer Buyout to Keep</fullName>
            </value>
            <value>
                <fullName>Buyout to Return</fullName>
            </value>
            <value>
                <fullName>Buyout to Keep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>