peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/BW_Copy_Count__c.field-meta.xml
<CustomField>
    <fullName>BW_Copy_Count__c</fullName>
    <label>B/W Copy Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>