peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Charge_Backs__c.field-meta.xml
<CustomField>
    <fullName>Charge_Backs__c</fullName>
    <label>Charge Backs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adf</fullName>
            </value>
            <value>
                <fullName>Back Panel</fullName>
            </value>
            <value>
                <fullName>Top Panel</fullName>
            </value>
            <value>
                <fullName>Platen Cover</fullName>
            </value>
            <value>
                <fullName>Right Side Panel</fullName>
            </value>
            <value>
                <fullName>Hard Drive</fullName>
            </value>
            <value>
                <fullName>Printer Board</fullName>
            </value>
            <value>
                <fullName>Network / Printer Board</fullName>
            </value>
            <value>
                <fullName>Network Board</fullName>
            </value>
            <value>
                <fullName>Fax Board</fullName>
            </value>
            <value>
                <fullName>Sorter Repair</fullName>
            </value>
            <value>
                <fullName>Missing Meter</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Error Codes</fullName>
            </value>
            <value>
                <fullName>Left Side Panel</fullName>
            </value>
            <value>
                <fullName>Toner Spill (if repairable)</fullName>
            </value>
            <value>
                <fullName>Radf/Adf Repair</fullName>
            </value>
            <value>
                <fullName>Meter Discrepancy</fullName>
            </value>
            <value>
                <fullName>Finisher  Repair</fullName>
            </value>
            <value>
                <fullName>Toner Spill (if not)</fullName>
            </value>
            <value>
                <fullName>No Image</fullName>
            </value>
            <value>
                <fullName>Black Image</fullName>
            </value>
            <value>
                <fullName>Jams In Machine</fullName>
            </value>
            <value>
                <fullName>Jams  In Feeder</fullName>
            </value>
            <value>
                <fullName>No Toner</fullName>
            </value>
            <value>
                <fullName>Right Door</fullName>
            </value>
            <value>
                <fullName>Clamshell Supports</fullName>
            </value>
            <value>
                <fullName>Defective Circuit Board</fullName>
            </value>
            <value>
                <fullName>No Power</fullName>
            </value>
            <value>
                <fullName>Receiving Tray</fullName>
            </value>
            <value>
                <fullName>Cassettes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>