peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Chargeback_Description__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chargeback Description</label>
    <type>TextArea</type>
</CustomField>