peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/City_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>City_Tax_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>City Tax Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>