peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/City_Transit_Tax_Percent__c.field-meta.xml
<CustomField>
    <fullName>City_Transit_Tax_Percent__c</fullName>
    <label>City Transit Tax Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>