peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>Commission_Percent__c</fullName>
    <label>Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>