peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Condition_Report__c.field-meta.xml
<CustomField>
    <fullName>Condition_Report__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Condition Report</label>
    <length>80</length>
    <type>Text</type>
</CustomField>