peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Condition_Updated__c.field-meta.xml
<CustomField>
    <fullName>Condition_Updated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Condition Updated</label>
    <type>Date</type>
</CustomField>