peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/County_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>County_Tax_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>County Tax Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>