peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/County_Tax_Percent__c.field-meta.xml
<CustomField>
    <fullName>County_Tax_Percent__c</fullName>
    <label>County Tax Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>