peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/County_Transit_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>County_Transit_Tax_Amount__c</fullName>
    <label>County Transit Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>