peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Credit_Memo_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Amount__c</fullName>
    <label>Credit Memo Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>