peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>B</fullName>
                <isActive>false</isActive>
                <label>B</label>
            </value>
            <value>
                <fullName>D</fullName>
                <isActive>false</isActive>
                <label>D</label>
            </value>
            <value>
                <fullName>T</fullName>
                <isActive>false</isActive>
                <label>T</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>