peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Current_Asset_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Asset_Value__c</fullName>
    <label>Current Asset Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>