peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field will be displaced on the invoice</inlineHelpText>
    <label>Customer Reference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>