peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Data_Security__c.field-meta.xml
<CustomField>
    <fullName>Data_Security__c</fullName>
    <label>Data Security</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
                <label>Device Overwrite with confirmation page</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Device Overwrite with no printout</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>DOD wipe Logicube</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Hard Drive Destroyed</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>No Hard Drive</label>
            </value>
            <value>
                <fullName>ERROR:#N/A</fullName>
            </value>
            <value>
                <fullName>Removed Hard Drive</fullName>
            </value>
            <value>
                <fullName>Overwrite Complete</fullName>
            </value>
            <value>
                <fullName>TTTT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>