peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Date_Returned__c.field-meta.xml
<CustomField>
    <fullName>Date_Returned__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Return by date on RA</label>
    <type>Date</type>
</CustomField>