peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Days_in_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Inventory__c</fullName>
    <formula>IF(   
  OR(
    ISBLANK(Proceeds_Received_Date__c),
    ISBLANK(Equipment_Received_Date__c)
    ),
    null,
    Proceeds_Received_Date__c - Equipment_Received_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>