peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/DDI_Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>DDI_Shipping_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DDI Shipping Date</label>
    <type>Date</type>
</CustomField>