peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/DDI_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>DDI_Tracking_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DDI Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>