peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>