peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Assets (Dealer)</relationshipLabel>
    <relationshipName>Contract_Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>