peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Dealer_Emails__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Emails__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Emails</label>
    <type>TextArea</type>
</CustomField>