peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Dealer_Invoice_User__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Invoice_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Invoice User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>