peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Dealer_Repurchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Repurchase_Amount__c</fullName>
    <label>Dealer Repurchase Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>