peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Dealer_Repurchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Repurchase_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Repurchase Date</label>
    <type>Date</type>
</CustomField>