peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/E_Title__c.field-meta.xml
<CustomField>
    <fullName>E_Title__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E - Title</label>
    <type>Checkbox</type>
</CustomField>