peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Equipment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Cost__c</fullName>
    <label>Equipment Cost %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>