peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Equipment_Description__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Description</label>
    <length>31072</length>
    <type>LongTextArea</type>
</CustomField>