peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Equipment_Recycled_Date__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Recycled_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Recycled Date</label>
    <type>Date</type>
</CustomField>