peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Equipment_Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Sale_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Sale Date</label>
    <type>Date</type>
</CustomField>